--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,60 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: white;
   background-color: #333;
+}
+
+h1 {
+  margin: 0;
+}
+
+.container {
+  max-width: 800px;
+  margin: 2rem auto;
+  text-align: center;
+}
+
+.timer-container {
+  margin-top: 2rem;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 1px 1px 18px rgb(44, 44, 44);
+  background-color: rgb(100, 100, 100);
+}
+
+.toggle-button {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 4px;
+  font-weight: bold;
+  color: white;
+  background-color: rgb(16, 153, 23);
+  transition: filter ease 0.2s;
+}
+
+.toggle-button:hover {
+  filter: invert(80%);
+}
+
+.toggle-button.active {
+  background-color: rgb(167, 40, 23);
+}
+
+.timer__time-container {
+  width: 80%;
+  margin: 2rem auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.timer__time-container > p {
+  width: 3.6rem;
+  height: 3.6rem;
+  border-radius: 6px;
+  font-size: 1.6rem;
+  font-weight: bold;
+  line-height: 3.6rem;
+  color: black;
+  background-color: white;
 }
